--- a/xOrdineServizio/My Project/Settings.settings
+++ b/xOrdineServizio/My Project/Settings.settings
@@ -38,7 +38,7 @@
       <Value Profile="(Default)">LEGIONE CARABINIERI TOSCANA</Value>
     </Setting>
     <Setting Name="versioneDB" Type="System.String" Scope="User">
-      <Value Profile="(Default)">2.20</Value>
+      <Value Profile="(Default)">2.50</Value>
     </Setting>
     <Setting Name="urlAggiornamenti" Type="System.String" Scope="User">
       <Value Profile="(Default)">http://www.toppolino.it/listing/orse</Value>
@@ -60,6 +60,9 @@
     </Setting>
     <Setting Name="altezzaRigaDivisioneRigheDataGrigInterventi_IntervalliLibero" Type="System.Int32" Scope="Application">
       <Value Profile="(Default)">5</Value>
+    </Setting>
+    <Setting Name="dataUltimaEsportazioneDati" Type="System.DateTime" Scope="User">
+      <Value Profile="(Default)" />
     </Setting>
   </Settings>
 </SettingsFile>
