--- a/xOrdineServizio/app.config
+++ b/xOrdineServizio/app.config
@@ -64,7 +64,7 @@
                 <value>LEGIONE CARABINIERI TOSCANA</value>
             </setting>
             <setting name="versioneDB" serializeAs="String">
-                <value>2.20</value>
+                <value>2.50</value>
             </setting>
             <setting name="urlAggiornamenti" serializeAs="String">
                 <value>http://www.toppolino.it/listing/orse</value>
@@ -83,6 +83,9 @@
             </setting>
             <setting name="ComandanteTitolare" serializeAs="String">
                 <value>True</value>
+            </setting>
+            <setting name="dataUltimaEsportazioneDati" serializeAs="String">
+                <value />
             </setting>
         </OrSe.My.MySettings>
     </userSettings>
