--- a/trunk/xOrdineServizio/app.config
+++ b/trunk/xOrdineServizio/app.config
@@ -87,6 +87,9 @@
             <setting name="dataUltimaEsportazioneDati" serializeAs="String">
                 <value />
             </setting>
+            <setting name="intervalloSalvataggioAutomatico" serializeAs="String">
+                <value>5</value>
+            </setting>
         </OrSe.My.MySettings>
     </userSettings>
     <applicationSettings>
