inserito parametro dimensione form nei Settings invertito ordine di visualizzazione dei soggetti controllati (non più DESC) visuallizzazione dei sopralluoghi anche nella finestra di scelta dell'OS
TODO:
modificare COMBOBOX per la scelta del comune. Prevedere inserimento.

--- a/trunk/xOrdineServizio/My Project/Settings.settings
+++ b/trunk/xOrdineServizio/My Project/Settings.settings
@@ -67,5 +67,11 @@
     <Setting Name="intervalloSalvataggioAutomatico" Type="System.String" Scope="User">
       <Value Profile="(Default)">5</Value>
     </Setting>
+    <Setting Name="formHeight" Type="System.String" Scope="User">
+      <Value Profile="(Default)">576</Value>
+    </Setting>
+    <Setting Name="formWidth" Type="System.String" Scope="User">
+      <Value Profile="(Default)">1040</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
