--- a/trunk/xOrdineServizio/app.config
+++ b/trunk/xOrdineServizio/app.config
@@ -90,6 +90,12 @@
             <setting name="intervalloSalvataggioAutomatico" serializeAs="String">
                 <value>5</value>
             </setting>
+            <setting name="formHeight" serializeAs="String">
+                <value>576</value>
+            </setting>
+            <setting name="formWidth" serializeAs="String">
+                <value>1040</value>
+            </setting>
         </OrSe.My.MySettings>
     </userSettings>
     <applicationSettings>
