--- a/trunk/xOrdineServizio/OrSe.vbproj
+++ b/trunk/xOrdineServizio/OrSe.vbproj
@@ -16,8 +16,8 @@
     <ManifestCertificateThumbprint>009FB2BFD716BF2FF4E9479F098ECF8F83A7A214</ManifestCertificateThumbprint>
     <ManifestKeyFile>xOrdineServizio_TemporaryKey.pfx</ManifestKeyFile>
     <GenerateManifests>false</GenerateManifests>
-    <SignManifests>true</SignManifests>
-    <SignAssembly>true</SignAssembly>
+    <SignManifests>false</SignManifests>
+    <SignAssembly>false</SignAssembly>
     <AssemblyOriginatorKeyFile>xOrdineServizio_TemporaryKey.pfx</AssemblyOriginatorKeyFile>
     <TargetZone>LocalIntranet</TargetZone>
     <ApplicationIcon>Resources\btnPrima\XOrdineServizio.ico</ApplicationIcon>
@@ -92,6 +92,9 @@
     </Reference>
     <Reference Include="CrystalDecisions.Windows.Forms, Version=10.2.3600.0, Culture=neutral, PublicKeyToken=692fbea5521e1304">
       <Private>True</Private>
+    </Reference>
+    <Reference Include="ImapX, Version=1.2.3.126, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>.\ImapX.dll</HintPath>
     </Reference>
     <Reference Include="Ionic.Zip, Version=1.9.1.5, Culture=neutral, PublicKeyToken=edbe51ad942a3f5c, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -220,6 +223,12 @@
       <DependentUpon>FSopralluogo.vb</DependentUpon>
     </Compile>
     <Compile Include="FSopralluogo.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FSopralluogoListaStampa.Designer.vb">
+      <DependentUpon>FSopralluogoListaStampa.vb</DependentUpon>
+    </Compile>
+    <Compile Include="FSopralluogoListaStampa.vb">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="FVedi.Designer.vb">
@@ -427,7 +436,6 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="dbAlegatoA.mdb">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <EmbeddedResource Include="FDataRange.resx">
       <SubType>Designer</SubType>
@@ -444,6 +452,10 @@
     <EmbeddedResource Include="FSopralluogo.resx">
       <SubType>Designer</SubType>
       <DependentUpon>FSopralluogo.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FSopralluogoListaStampa.resx">
+      <SubType>Designer</SubType>
+      <DependentUpon>FSopralluogoListaStampa.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FVedi.resx">
       <SubType>Designer</SubType>
