--- a/xOrdineServizio/app.config
+++ b/xOrdineServizio/app.config
@@ -85,7 +85,7 @@
                 <value>True</value>
             </setting>
             <setting name="dataUltimaEsportazioneDati" serializeAs="String">
-                <value />
+                <value>1900-01-01</value>
             </setting>
             <setting name="intervalloSalvataggioAutomatico" serializeAs="String">
                 <value>5</value>
@@ -95,6 +95,15 @@
             </setting>
             <setting name="formWidth" serializeAs="String">
                 <value>1040</value>
+            </setting>
+            <setting name="sopralluogoListBoxVociRapide" serializeAs="String">
+                <value>Il danno subito ammonta a € _______.&amp;Danno non coperto da assicurazione.&amp;Danno coperto da assicurazione.&amp;Sul luogo non sono stati trovati elementi utili al prosieguo delle indagini.&amp;Il fatto è avvenuto tra le ore ____ e le ore ____.&amp;La parte lesa viene invitata a recarsi presso il Comando Arma competente per territorio per al fine di formalizzare la denuncia/querela.</value>
+            </setting>
+            <setting name="maximizeForm" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="sopralluogoPromemoria" serializeAs="String">
+                <value>descrizione del luogo - descrizione refurtiva - ammontare del danno  subito - ora presunta del fatto - eventuali sospetti - trovati elementi utili alle indagini? - coperto da assicurazione?</value>
             </setting>
         </OrSe.My.MySettings>
     </userSettings>
