--- a/trunk/xOrdineServizio/app.config
+++ b/trunk/xOrdineServizio/app.config
@@ -94,7 +94,7 @@
                 <value>descrizione del luogo - descrizione refurtiva - ammontare del danno  subito - ora presunta del fatto - eventuali sospetti - trovati elementi utili alle indagini? - coperto da assicurazione?</value>
             </setting>
             <setting name="sopralluogoListBoxVociRapide" serializeAs="String">
-                <value>Il danno subito ammonta a € _______.&amp;Danno non coperto da assicurazione.&amp;Danno coperto da assicurazione.&amp;Sul luogo non sono stati trovati elementi utili al prosieguo delle indagini.&amp;Il fatto è avvenuto tra le ore ____ e le ore ____.&amp;La parte lesa viene invitata a recarsi presso il Comando Arma competente per territorio per al fine di formalizzare la denuncia/querela.</value>
+                <value>Il danno subito ammonta a € _______.&amp;Danno non coperto da assicurazione.&amp;Danno coperto da assicurazione.&amp;Sul luogo non sono stati trovati elementi utili al prosieguo delle indagini.&amp;Il fatto è avvenuto tra le ore ____ e le ore ____.</value>
             </setting>
         </OrSe.My.MySettings>
     </userSettings>
