ver 2.67 + ritorno a capo nelle voci rapide del sopralluogo

--- a/trunk/xOrdineServizio/app.config
+++ b/trunk/xOrdineServizio/app.config
@@ -88,7 +88,7 @@
                 <value>5</value>
             </setting>
             <setting name="maximizeForm" serializeAs="String">
-                <value>True</value>
+                <value>False</value>
             </setting>
             <setting name="sopralluogoPromemoria" serializeAs="String">
                 <value>descrizione del luogo - descrizione refurtiva - ammontare del danno  subito - ora presunta del fatto - eventuali sospetti - trovati elementi utili alle indagini? - coperto da assicurazione?</value>
