--- a/trunk/xOrdineServizio/My Project/Settings.settings
+++ b/trunk/xOrdineServizio/My Project/Settings.settings
@@ -71,7 +71,7 @@
       <Value Profile="(Default)">1040</Value>
     </Setting>
     <Setting Name="maximizeForm" GenerateDefaultValueInCode="false" Type="System.Boolean" Scope="User">
-      <Value Profile="(Default)">True</Value>
+      <Value Profile="(Default)">False</Value>
     </Setting>
     <Setting Name="sopralluogoPromemoria" GenerateDefaultValueInCode="false" Type="System.String" Scope="User">
       <Value Profile="(Default)">descrizione del luogo - descrizione refurtiva - ammontare del danno  subito - ora presunta del fatto - eventuali sospetti - trovati elementi utili alle indagini? - coperto da assicurazione?</Value>
