In fase di sviluppo il sistema di segnalazione delle eccezioni non gestite.

--- a/trunk/xOrdineServizio/My Project/Settings.settings
+++ b/trunk/xOrdineServizio/My Project/Settings.settings
@@ -61,7 +61,7 @@
     <Setting Name="dataUltimaEsportazioneDati" GenerateDefaultValueInCode="false" Type="System.DateTime" Scope="User">
       <Value Profile="(Default)">1900-01-01</Value>
     </Setting>
-    <Setting Name="intervalloSalvataggioAutomatico" GenerateDefaultValueInCode="false" Type="System.String" Scope="User">
+    <Setting Name="intervalloSalvataggioAutomatico" Type="System.String" Scope="User">
       <Value Profile="(Default)">5</Value>
     </Setting>
     <Setting Name="formHeight" Type="System.String" Scope="Application">
@@ -70,13 +70,13 @@
     <Setting Name="formWidth" Type="System.String" Scope="Application">
       <Value Profile="(Default)">1040</Value>
     </Setting>
-    <Setting Name="maximizeForm" GenerateDefaultValueInCode="false" Type="System.Boolean" Scope="User">
+    <Setting Name="maximizeForm" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
-    <Setting Name="sopralluogoPromemoria" GenerateDefaultValueInCode="false" Type="System.String" Scope="User">
+    <Setting Name="sopralluogoPromemoria" Type="System.String" Scope="User">
       <Value Profile="(Default)">descrizione del luogo - descrizione refurtiva - ammontare del danno  subito - ora presunta del fatto - eventuali sospetti - trovati elementi utili alle indagini? - coperto da assicurazione?</Value>
     </Setting>
-    <Setting Name="sopralluogoListBoxVociRapide" GenerateDefaultValueInCode="false" Type="System.String" Scope="User">
+    <Setting Name="sopralluogoListBoxVociRapide" Type="System.String" Scope="User">
       <Value Profile="(Default)">Il danno subito ammonta a € _______.&amp;Danno non coperto da assicurazione.&amp;Danno coperto da assicurazione.&amp;Sul luogo non sono stati trovati elementi utili al prosieguo delle indagini.&amp;Il fatto è avvenuto tra le ore ____ e le ore ____.</Value>
     </Setting>
   </Settings>
