--- a/trunk/xOrdineServizio/OrSe.vbproj
+++ b/trunk/xOrdineServizio/OrSe.vbproj
@@ -75,6 +75,10 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Accessibility" />
+    <Reference Include="BugTrapN, Version=1.3.3291.42976, Culture=neutral, PublicKeyToken=fc29784e21fb8980, processorArchitecture=x86">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>.\BugTrapN.dll</HintPath>
+    </Reference>
     <Reference Include="CrystalDecisions.CrystalReports.Engine, Version=10.2.3600.0, Culture=neutral, PublicKeyToken=692fbea5521e1304">
       <Private>True</Private>
     </Reference>
@@ -134,12 +138,19 @@
       <DependentUpon>dbAlegatoADataSet.xsd</DependentUpon>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Compile>
+    <Compile Include="DEccezione.Designer.vb">
+      <DependentUpon>DEccezione.vb</DependentUpon>
+    </Compile>
+    <Compile Include="DEccezione.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="DInsDatiPreliminari.Designer.vb">
       <DependentUpon>DInsDatiPreliminari.vb</DependentUpon>
     </Compile>
     <Compile Include="DInsDatiPreliminari.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="email.vb" />
     <Compile Include="FAbout.Designer.vb">
       <DependentUpon>FAbout.vb</DependentUpon>
     </Compile>
@@ -433,6 +444,10 @@
     <Content Include="dbAlegatoA.mdb">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <EmbeddedResource Include="DEccezione.resx">
+      <SubType>Designer</SubType>
+      <DependentUpon>DEccezione.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FDataRange.resx">
       <SubType>Designer</SubType>
       <DependentUpon>FDataRange.vb</DependentUpon>
