--- a/trunk/xOrdineServizio/app.config
+++ b/trunk/xOrdineServizio/app.config
@@ -96,6 +96,9 @@
             <setting name="sopralluogoListBoxVociRapide" serializeAs="String">
                 <value>Il danno subito ammonta a € _______.&amp;Danno non coperto da assicurazione.&amp;Danno coperto da assicurazione.&amp;Sul luogo non sono stati trovati elementi utili al prosieguo delle indagini.&amp;Il fatto è avvenuto tra le ore ____ e le ore ____.</value>
             </setting>
+            <setting name="sTempPath" serializeAs="String">
+                <value>./temp</value>
+            </setting>
         </OrSe.My.MySettings>
     </userSettings>
     <applicationSettings>
